integration of mini model to test corpus

--- a/notebook/prototypage.ipynb
+++ b/notebook/prototypage.ipynb
@@ -50,34 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "8d41f0d1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jallo\\OneDrive - Ministere de l'Enseignement Superieur et de la Recherche Scientifique\\Bureau\\ChatBot-RAG\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "c:\\Users\\jallo\\OneDrive - Ministere de l'Enseignement Superieur et de la Recherche Scientifique\\Bureau\\ChatBot-RAG\\env\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\jallo\\.cache\\huggingface\\hub\\models--sentence-transformers--all-MiniLM-L6-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Charger le modèle de embeddings\n",
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
-    "embedding_dim = model.get_sentence_embedding_dimension() "
+    "embed_model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "embedding_dim = embed_model.get_sentence_embedding_dimension()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "9fae773a",
    "metadata": {},
    "outputs": [
@@ -108,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "71e103c4",
    "metadata": {},
    "outputs": [],
@@ -146,19 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "40ba9d09",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fonction pour calculer les embeddings avec SentenceTransformer\n",
+    "from typing import List\n",
+    "\n",
     "def calculate_embeddings(corpus: str) -> List[float]:\n",
-    "    return model.encode([corpus])[0].tolist()"
+    "    return embed_model.encode([corpus])[0].tolist()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "d624d5d2",
    "metadata": {},
    "outputs": [],
@@ -172,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "2ba5f7a7",
    "metadata": {},
    "outputs": [],
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "582f4af8",
    "metadata": {},
    "outputs": [],
@@ -212,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "ad84a74a",
    "metadata": {},
    "outputs": [
@@ -264,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "65830ce8",
    "metadata": {},
    "outputs": [
@@ -328,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "33cb00d0",
    "metadata": {},
    "outputs": [
@@ -347,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "f26f7b80",
    "metadata": {},
    "outputs": [],
@@ -375,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "6c313b67",
    "metadata": {},
    "outputs": [
@@ -407,6 +397,102 @@
     "    print(f\"Corpus: {r[1]}\")\n",
     "    print(f\"Distance: {r[2]}\")\n",
     "    print(\"---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8ffdaebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
+    "\n",
+    "lm_model_id = \"dbddv01/gpt2-french-small\"\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(lm_model_id)\n",
+    "gpt2_fr = AutoModelForCausalLM.from_pretrained(lm_model_id)\n",
+    "\n",
+    "chat_pipe = pipeline(\n",
+    "    \"text-generation\",\n",
+    "    model=gpt2_fr,\n",
+    "    tokenizer=tokenizer,\n",
+    "    device=-1,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1987abab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_context(question: str, top_k: int = 3) -> str:\n",
+    "    results = similar_corpus(question, top_k=top_k)\n",
+    "    if not results:\n",
+    "        return \"Aucun contexte trouvé dans la base.\"\n",
+    "    # results: (id, corpus, distance)\n",
+    "    return \"\\n\".join([f\"- {r[1]}\" for r in results])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "77dfc8ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_answer_with_model(question: str, max_new_tokens: int = 80) -> str:\n",
+    "    context = build_context(question, top_k=3)\n",
+    "    prompt = (\n",
+    "        \"Tu es un assistant qui répond en français en te basant uniquement sur le contexte suivant.\\n\"\n",
+    "        f\"Contexte:\\n{context}\\n\\n\"\n",
+    "        f\"Question: {question}\\n\"\n",
+    "        \"Réponse:\"\n",
+    "    )\n",
+    "    out = chat_pipe(\n",
+    "        prompt,\n",
+    "        max_new_tokens=max_new_tokens,\n",
+    "        do_sample=True,\n",
+    "        num_return_sequences=1,\n",
+    "        pad_token_id=tokenizer.eos_token_id,\n",
+    "    )\n",
+    "    return out[0][\"generated_text\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2d10a7df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu es un assistant qui répond en français en te basant uniquement sur le contexte suivant.\n",
+      "Contexte:\n",
+      "- c: e j'aimerais savoir e j'ai une réunion ce soir e\n",
+      "- h: oui c'est rue de la Loi la réunion\n",
+      "- h: ce soir il doit y avoir une réunion sur le D A E U qui doit se faire à l'I U(P) e rue de la Loi\n",
+      "\n",
+      "Question: Bonjour, j'aimerais savoir où se trouve la réunion de ce soir.\n",
+      "Réponse: Bonjour, j'aimerais savoir où se trouve la réunion de ce jour. ai-je fait m'être le premier à porter mes armes. J'ai eu ma première rencontre avec la religion. Je me suis rendu sur place par la reine et ma petite amie au petit matin du 4 juillet en me demandant de s'y tenir. Je suis dit : « Je suis un soldat français\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_question = \"Bonjour, j'aimerais savoir où se trouve la réunion de ce soir.\"\n",
+    "print(generate_answer_with_model(user_question))\n"
    ]
   }
  ],
